--- a/Background Cuadrados y lineas/style.css
+++ b/Background Cuadrados y lineas/style.css
@@ -8,5 +8,5 @@
         )
         50% 50% / var(--size) var(--size),
       linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% /
-        var(--size) var(--size), hwb(216 37% 61%);
-  }s
+        var(--size) var(--size), hsl(210 70% 34%);
+  }
